grammar.js
    program: ($) => seq(optional($.hash_bang_line), repeat($._statement)),

    hash_bang_line: () => /#!.*/,

    export_statement: ($) =>
      prec(
        PREC.DECLARATION,
        choice(
          choice(
            seq(
              "export",
              choice(
                seq("*", $._from_clause, $._semicolon),
                seq($.export_clause, $._from_clause, $._semicolon),
                seq($.export_clause, $._semicolon)
              )
            ),
            seq(
              repeat(field("decorator", $.decorator)),
              "export",
              choice(
                field("declaration", $._declaration),
                seq("default", field("value", $._expression), $._semicolon)
              )
            )
          ),
          seq("export", "=", $.identifier, $._semicolon),
          seq("export", "as", "namespace", $.identifier, $._semicolon)
        )
      ),

    export_clause: ($) =>
      seq(
        "{",
        commaSep(alias($._import_export_specifier, $.export_specifier)),
        optional(","),
        "}"
      ),

    _import_export_specifier: ($) =>
      seq(
        optional(choice("typeof")),
        seq(
          field("name", $.identifier),
          optional(seq("as", field("alias", $.identifier)))
        )
      ),

    _declaration: ($) =>
      choice(
        $.function_declaration,
        $.generator_function_declaration,
        $.class_declaration,
        $.lexical_declaration,
        $.variable_declaration,
        $.function_signature,
        $.abstract_class_declaration,
        $.module,
        prec(PREC.DECLARATION, $.internal_module),
        $.type_alias_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.import_alias,
        $.ambient_declaration
      ),

    import: () => token("import"),

    import_statement: ($) =>
      prec(
        PREC.DECLARATION,
        seq(
          "import",
          optional(choice("type", "typeof")),
          choice(
            seq($.import_clause, $._from_clause),
            $.import_require_clause,
            $.string
          ),
          $._semicolon
        )
      ),

    import_clause: ($) =>
      choice(
        $.namespace_import,
        $.named_imports,
        seq(
          $.identifier,
          optional(seq(",", choice($.namespace_import, $.named_imports)))
        )
      ),

    _from_clause: ($) => seq("from", field("source", $.string)),

    named_imports: ($) =>
      seq(
        "{",
        commaSep(alias($._import_export_specifier, $.import_specifier)),
        optional(","),
        "}"
      ),

    _statement: ($) =>
      choice(
        $.export_statement,
        $.import_statement,
        $.debugger_statement,
        $.expression_statement,
        $._declaration,
        $.statement_block,
        $.if_statement,
        $.switch_statement,
        $.for_statement,
        $.for_in_statement,
        $.while_statement,
        $.do_statement,
        $.try_statement,
        $.with_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.throw_statement,
        $.empty_statement,
        $.labeled_statement
      ),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    statement_block: ($) =>
      prec.right(
        seq("{", repeat($._statement), "}", optional($._automatic_semicolon))
      ),

    debugger_statement: ($) => seq("debugger", $._semicolon),

    return_statement: ($) =>
      seq("return", optional($._expressions), $._semicolon),

    _expressions: ($) => choice($._expression, $.sequence_expression),

    _expression: ($) =>
      choice(
        $.as_expression,
        $.non_null_expression,
        $.internal_module,
        $.super,
        $.type_assertion,

        $._primary_expression,
        $.assignment_expression,
        $.augmented_assignment_expression,
        $.await_expression,
        $.unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.update_expression,
        $.new_expression,
        $.yield_expression
      ),

    object: ($) =>
      prec(
        PREC.OBJECT,
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.pair,
                $.spread_element,
                $.method_definition,
                $.assignment_pattern,
                alias(
                  choice($.identifier, $._reserved_identifier),
                  $.shorthand_property_identifier
                )
              )
            )
          ),
          "}"
        )
      ),

    array: ($) =>
      seq(
        "[",
        commaSep(optional(choice($._expression, $.spread_element))),
        "]"
      ),

    class: ($) =>
      seq(
        repeat(field("decorator", $.decorator)),
        "class",
        field("name", optional($._type_identifier)),
        field("type_parameters", optional($.type_parameters)),
        optional($.class_heritage),
        field("body", $.class_body)
      ),

    function: ($) =>
      seq(
        optional("async"),
        "function",
        field("name", optional($.identifier)),
        $._call_signature,
        field("body", $.statement_block)
      ),

    generator_function: ($) =>
      seq(
        optional("async"),
        "function",
        "*",
        field("name", optional($.identifier)),
        $._call_signature,
        field("body", $.statement_block)
      ),

    arrow_function: ($) =>
      seq(
        optional("async"),
        choice(
          field(
            "parameter",
            choice(alias($._reserved_identifier, $.identifier), $.identifier)
          ),
          $._call_signature
        ),
        "=>",
        field("body", choice($._expression, $.statement_block))
      ),

    non_null_expression: ($) =>
      prec.left(PREC.NON_NULL, seq($._expression, "!")),

    internal_module: ($) => seq("namespace", $._module),

    _module: ($) =>
      prec.right(
        seq(
          field("name", choice($.string, $.identifier, $.nested_identifier)),
          field("body", optional($.statement_block))
        )
      ),

    _call_signature: ($) =>
      seq(
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.formal_parameters),
        field(
          "return_type",
          optional(
            choice($.type_annotation, $.asserts, $.type_predicate_annotation)
          )
        )
      ),

    await_expression: ($) => seq("await", $._expression),

    _initializer: ($) => seq("=", field("value", $._expression)),

    sequence_expression: ($) =>
      prec(
        PREC.COMMA,
        seq(
          field("left", $._expression),
          ",",
          field("right", choice($.sequence_expression, $._expression))
        )
      ),

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^"\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^'\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          "'"
        )
      ),

    template_string: ($) =>
      seq(
        "`",
        repeat(
          choice($._template_chars, $.escape_sequence, $.template_substitution)
        ),
        "`"
      ),

    template_substitution: ($) => seq("${", $._expressions, "}"),

    regex: ($) =>
      seq(
        "/",
        field("pattern", $.regex_pattern),
        token.immediate("/"),
        optional(field("flags", $.regex_flags))
      ),

    regex_pattern: () =>
      token.immediate(
        repeat1(
          choice(
            seq(
              "[",
              repeat(
                choice(
                  seq("\\", /./), // escaped character
                  /[^\]\n\\]/ // any character besides ']' or '\n'
                )
              ),
              "]"
            ), // square-bracket-delimited character class
            seq("\\", /./), // escaped character
            /[^/\\\[\n]/ // any character besides '[', '\', '/', '\n'
          )
        )
      ),

    number: ($) => {
      const hex_literal = seq(choice("0x", "0X"), /[\da-fA-F](_?[\da-fA-F])*/);

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice("-", "+")), decimal_digits);
      const exponent_part = seq(choice("e", "E"), signed_integer);

      const binary_literal = seq(choice("0b", "0B"), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice("0o", "0O"), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        "n"
      );

      const decimal_integer_literal = choice(
        "0",
        seq(
          optional("0"),
          /[1-9]/,
          optional(seq(optional("_"), decimal_digits))
        )
      );

      const decimal_literal = choice(
        seq(
          decimal_integer_literal,
          ".",
          optional(decimal_digits),
          optional(exponent_part)
        ),
        seq(".", decimal_digits, optional(exponent_part)),
        seq(decimal_integer_literal, exponent_part),
        seq(decimal_digits)
      );

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal
        )
      );
    },

    identifier: ($) => {
      const alpha = /[^\x00-\x1F\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric = /[^\x00-\x1F\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    this: () => "this",
    super: () => "super",
    true: () => "true",
    false: () => "false",
    null: () => "null",

    class_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.decorator,
            seq($.method_definition, optional($._semicolon)),
            seq(
              choice(
                $.abstract_method_signature,
                $.index_signature,
                $.method_signature,
                $.public_field_definition
              ),
              choice($._semicolon, ",")
            )
          )
        ),
        "}"
      ),

    formal_parameters: ($) =>
      seq(
        "(",
        optional(seq(commaSep1($._formal_parameter), optional(","))),
        ")"
      ),

    _formal_parameter: ($) =>
      seq(
        repeat(field("decorator", $.decorator)),
        choice($.required_parameter, $.rest_parameter, $.optional_parameter)
      ),

    method_definition: ($) =>
      prec.left(
        seq(
          optional($.accessibility_modifier),
          optional("static"),
          optional($.readonly),
          optional("async"),
          optional(choice("get", "set", "*")),
          field("name", $._property_name),
          optional("?"),
          $._call_signature,
          field("body", $.statement_block)
        )
      ),

    pair: ($) =>
      seq(field("key", $._property_name), ":", field("value", $._expression)),

    _property_name: ($) =>
      choice(
        alias(
          choice($.identifier, $._reserved_identifier),
          $.property_identifier
        ),
        $.string,
        $.number,
        $.computed_property_name
      ),

    _reserved_identifier: ($) =>
      choice(
        "declare",
        "namespace",
        "type",
        "public",
        "private",
        "protected",
        $.readonly,
        "module",
        "any",
        "number",
        "boolean",
        "string",
        "symbol",
        "export",

        "get",
        "set",
        "async",
        "static"
      ),

    _semicolon: ($) => choice($._automatic_semicolon, ";"),

    required_parameter: ($) =>
      seq(
        $._parameter_name,
        optional($.type_annotation),
        optional($._initializer)
      ),

    _parameter_name: ($) =>
      seq(
        optional($.accessibility_modifier),
        optional($.readonly),
        choice(
          $.identifier,
          alias($._reserved_identifier, $.identifier),
          $._destructuring_pattern,
          $.this
        )
      ),

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
